--- a/04-owlvit.ipynb
+++ b/04-owlvit.ipynb
@@ -1056,7 +1056,7 @@
    "source": [
     "from datetime import datetime\n",
     "now = datetime.now()\n",
-    "csv_file = f\"__{MODEL}-{get_gpu_name().replace(\"\",\"_\")}-{now.day}-{now.hour}-{now.min}.csv\"\n",
+    "csv_file = f\"__{MODEL}-{get_gpu_name().replace(' ','_')}-{now.day}-{now.hour}-{now.min}.csv\"\n",
     "df.to_csv(csv_file)"
    ]
   }
