Updated code to calculate inference for separate stages

--- a/02-gorunding-dino-hf.ipynb
+++ b/02-gorunding-dino-hf.ipynb
@@ -8,24 +8,11 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -q huggingface\n",
     "!pip install -q transformers\n",
     "!pip install -q pillow\n",
     "!pip install -q loguru\n",
-    "!pip install -q pydantic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from PIL import Image\n",
-    "from transformers import AutoProcessor, AutoModelForZeroShotObjectDetection "
+    "!pip install -q pydantic\n",
+    "!pip install -q opencv-python"
    ]
   },
   {
@@ -36,21 +23,18 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'cuda'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tarik.setia/lab/cv-benchmark/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
     }
    ],
    "source": [
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model_id = \"IDEA-Research/grounding-dino-tiny\"\n",
-    "\n",
-    "device"
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoProcessor, AutoModelForZeroShotObjectDetection "
    ]
   },
   {
@@ -59,15 +43,40 @@
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "model_id = \"IDEA-Research/grounding-dino-tiny\"\n",
+    "\n",
     "processor = AutoProcessor.from_pretrained(model_id)\n",
     "model = AutoModelForZeroShotObjectDetection.from_pretrained(model_id).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -406,7 +415,7 @@
        ")"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -425,10 +434,10 @@
     {
      "data": {
       "text/plain": [
-       "device(type='cuda', index=0)"
+       "device(type='cpu')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,13 +448,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "\n",
     "import time\n",
     "import torch\n",
     "from utils.protocols import GDino\n",
@@ -459,42 +467,69 @@
     "text = \"Face.\"\n",
     "BASE_DIR = \"experiments/gdino\"\n",
     "\n",
-    "def process_video(video, frames=[]):\n",
-    "    start_time = datetime.now().isoformat()\n",
-    "    start = time.time()\n",
-    "    \n",
+    "def run_model(frames):\n",
     "    results = {}\n",
+    "    for frame_id, frame in frames.items():\n",
+    "        with torch.no_grad():\n",
+    "            outputs = model(**frame)\n",
+    "            results[frame_id] = outputs\n",
+    "    return results\n",
+    "\n",
+    "def process_video(video, frames=[]):\n",
+    "    start_time = datetime.now()\n",
+    "    target_sizes = None\n",
+    "    \n",
+    "    frames_ = {}\n",
+    "    start = time.time()\n",
     "    for frame_id, frame in read_video(video):\n",
     "        image = Image.fromarray(frame.astype(\"uint8\"))\n",
     "        inputs = processor(images=image, text=text, return_tensors=\"pt\").to(device)\n",
-    "        with torch.no_grad():\n",
-    "            outputs = model(**inputs)\n",
+    "        frames_[frame_id] = inputs\n",
+    "        if  target_sizes is None:\n",
+    "            target_sizes = torch.Tensor([image.size[::-1]])\n",
+    "    pre_processing_time = time.time() - start\n",
+    "    \n",
+    "    frames_ = {k: frames_[k] for k in list(frames_.keys())[:3]}\n",
+    "    n_frames = len(frames_)\n",
+    "    \n",
+    "    start = time.time()\n",
+    "    outputs = run_model(frames_)\n",
+    "    inference_time = time.time() - start\n",
+    "    \n",
+    "    results = {}\n",
+    "    start = time.time()\n",
+    "    \n",
+    "    for frame_id, output in outputs.items():    \n",
     "        detections = processor.post_process_grounded_object_detection(\n",
-    "            outputs,\n",
-    "            inputs.input_ids,\n",
+    "            output,\n",
+    "            frames_[frame_id].input_ids,\n",
     "            box_threshold=0.4,\n",
     "            text_threshold=0.3,\n",
     "            target_sizes=[image.size[::-1]]\n",
     "        )\n",
     "        results[frame_id] = convert_model_detection(detections[0])\n",
-    "\n",
-    "    end = time.time()\n",
-    "    end_time = datetime.now().isoformat()\n",
-    "    n_frames = frame_id+1 if not frames else len(frames)\n",
+    "    post_processing_time = time.time() - start\n",
+    "    \n",
+    "    end_time = datetime.now()\n",
     "    \n",
     "    exp =  GDino(\n",
     "        model=MODEL,\n",
     "        gpu=get_gpu_name(),\n",
-    "        file=video,\n",
-    "        prompt=text,\n",
+    "        video_file=video,\n",
     "        frames=None if not frames else frames,\n",
     "        n_frames=n_frames,\n",
-    "        processing_time=end-start,\n",
-    "        fps=n_frames/(end-start),\n",
+    "        \n",
+    "        pre_processing_time=pre_processing_time,\n",
+    "        inference_time=inference_time,\n",
+    "        post_processing_time=post_processing_time,\n",
+    "        video_processing_time=(end_time-start_time).seconds,\n",
+    "       \n",
+    "        start_time=start_time.isoformat(),\n",
+    "        end_time=end_time.isoformat(),\n",
+    "        record_file=get_file_name(BASE_DIR, start, MODEL, video),\n",
+    "        \n",
     "        data=results,\n",
-    "        start_time=start_time,\n",
-    "        end_time=end_time,\n",
-    "        filename=get_file_name(BASE_DIR, start, MODEL, video)\n",
+    "        prompt=text,\n",
     "    )\n",
     "    exp.save()\n",
     "    exp.log()\n",
@@ -504,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -513,8 +548,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-06-11 10:17:10.208\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mutils.protocols\u001b[0m:\u001b[36mlog\u001b[0m:\u001b[36m88\u001b[0m - \u001b[1mdata/720.mp4 | frames=283 | delta=85.01531672477722 | fps=3.3288119235756644\u001b[0m\n",
-      "\u001b[32m2024-06-11 10:18:40.274\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mutils.protocols\u001b[0m:\u001b[36mlog\u001b[0m:\u001b[36m88\u001b[0m - \u001b[1mdata/1080.mp4 | frames=283 | delta=90.03738784790039 | fps=3.143138720084485\u001b[0m\n"
+      "\u001b[32m2024-06-12 01:14:33.704\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mutils.protocols\u001b[0m:\u001b[36mlog\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mdata/720.mp4 | frames=3 | model_fps=0.27745390044633944 | inference_time=10.812607049942017 | preprocess_time=10.130944013595581\u001b[0m\n",
+      "\u001b[32m2024-06-12 01:14:56.246\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mutils.protocols\u001b[0m:\u001b[36mlog\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mdata/1080.mp4 | frames=3 | model_fps=0.2995214787776134 | inference_time=10.015976190567017 | preprocess_time=12.25296425819397\u001b[0m\n"
      ]
     }
    ],
@@ -529,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -541,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -554,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -582,14 +617,20 @@
        "      <th></th>\n",
        "      <th>model</th>\n",
        "      <th>gpu</th>\n",
-       "      <th>file</th>\n",
+       "      <th>video_file</th>\n",
        "      <th>batch_size</th>\n",
        "      <th>n_frames</th>\n",
-       "      <th>processing_time</th>\n",
-       "      <th>fps</th>\n",
+       "      <th>pre_processing_fps</th>\n",
+       "      <th>inference_fps</th>\n",
+       "      <th>post_processing_fps</th>\n",
+       "      <th>video_fps</th>\n",
+       "      <th>pre_processing_time</th>\n",
+       "      <th>inference_time</th>\n",
+       "      <th>post_processing_time</th>\n",
+       "      <th>video_processing_time</th>\n",
        "      <th>start_time</th>\n",
        "      <th>end_time</th>\n",
-       "      <th>result_file</th>\n",
+       "      <th>record_file</th>\n",
        "      <th>prompt</th>\n",
        "      <th>data</th>\n",
        "    </tr>\n",
@@ -598,60 +639,80 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>groungding-dino-tiny-hf</td>\n",
-       "      <td>Tesla V100-SXM2-16GB</td>\n",
+       "      <td>cpu</td>\n",
        "      <td>data/720.mp4</td>\n",
        "      <td>1</td>\n",
-       "      <td>283</td>\n",
-       "      <td>85.015317</td>\n",
-       "      <td>3.328812</td>\n",
-       "      <td>2024-06-11T10:15:45.192772</td>\n",
-       "      <td>2024-06-11T10:17:10.208104</td>\n",
-       "      <td>experiments/gdino/17181009451927836-groungding...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.296122</td>\n",
+       "      <td>0.277454</td>\n",
+       "      <td>1991.912617</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>10.130944</td>\n",
+       "      <td>10.812607</td>\n",
+       "      <td>0.001506</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2024-06-12T01:14:12.476800</td>\n",
+       "      <td>2024-06-12T01:14:33.703193</td>\n",
+       "      <td>experiments/gdino/exp-groungding-dino-tiny-hf-...</td>\n",
        "      <td>Face.</td>\n",
-       "      <td>{0: [box=[566.5269165039062, 154.7469024658203...</td>\n",
+       "      <td>{0: [box=[566.631103515625, 157.65919494628906...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>groungding-dino-tiny-hf</td>\n",
-       "      <td>Tesla V100-SXM2-16GB</td>\n",
+       "      <td>cpu</td>\n",
        "      <td>data/1080.mp4</td>\n",
        "      <td>1</td>\n",
-       "      <td>283</td>\n",
-       "      <td>90.037388</td>\n",
-       "      <td>3.143139</td>\n",
-       "      <td>2024-06-11T10:17:10.236489</td>\n",
-       "      <td>2024-06-11T10:18:40.273898</td>\n",
-       "      <td>experiments/gdino/17181010302365065-groungding...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.244839</td>\n",
+       "      <td>0.299521</td>\n",
+       "      <td>2178.859221</td>\n",
+       "      <td>0.136364</td>\n",
+       "      <td>12.252964</td>\n",
+       "      <td>10.015976</td>\n",
+       "      <td>0.001377</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2024-06-12T01:14:33.714054</td>\n",
+       "      <td>2024-06-12T01:14:56.245460</td>\n",
+       "      <td>experiments/gdino/exp-groungding-dino-tiny-hf-...</td>\n",
        "      <td>Face.</td>\n",
-       "      <td>{0: [box=[850.1380004882812, 224.1177520751953...</td>\n",
+       "      <td>{0: [box=[849.8721313476562, 226.7397766113281...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     model                   gpu           file  batch_size  \\\n",
-       "0  groungding-dino-tiny-hf  Tesla V100-SXM2-16GB   data/720.mp4           1   \n",
-       "1  groungding-dino-tiny-hf  Tesla V100-SXM2-16GB  data/1080.mp4           1   \n",
+       "                     model  gpu     video_file  batch_size  n_frames  \\\n",
+       "0  groungding-dino-tiny-hf  cpu   data/720.mp4           1         3   \n",
+       "1  groungding-dino-tiny-hf  cpu  data/1080.mp4           1         3   \n",
        "\n",
-       "   n_frames  processing_time       fps                  start_time  \\\n",
-       "0       283        85.015317  3.328812  2024-06-11T10:15:45.192772   \n",
-       "1       283        90.037388  3.143139  2024-06-11T10:17:10.236489   \n",
+       "   pre_processing_fps  inference_fps  post_processing_fps  video_fps  \\\n",
+       "0            0.296122       0.277454          1991.912617   0.142857   \n",
+       "1            0.244839       0.299521          2178.859221   0.136364   \n",
+       "\n",
+       "   pre_processing_time  inference_time  post_processing_time  \\\n",
+       "0            10.130944       10.812607              0.001506   \n",
+       "1            12.252964       10.015976              0.001377   \n",
+       "\n",
+       "   video_processing_time                  start_time  \\\n",
+       "0                     21  2024-06-12T01:14:12.476800   \n",
+       "1                     22  2024-06-12T01:14:33.714054   \n",
        "\n",
        "                     end_time  \\\n",
-       "0  2024-06-11T10:17:10.208104   \n",
-       "1  2024-06-11T10:18:40.273898   \n",
+       "0  2024-06-12T01:14:33.703193   \n",
+       "1  2024-06-12T01:14:56.245460   \n",
        "\n",
-       "                                         result_file prompt  \\\n",
-       "0  experiments/gdino/17181009451927836-groungding...  Face.   \n",
-       "1  experiments/gdino/17181010302365065-groungding...  Face.   \n",
+       "                                         record_file prompt  \\\n",
+       "0  experiments/gdino/exp-groungding-dino-tiny-hf-...  Face.   \n",
+       "1  experiments/gdino/exp-groungding-dino-tiny-hf-...  Face.   \n",
        "\n",
        "                                                data  \n",
-       "0  {0: [box=[566.5269165039062, 154.7469024658203...  \n",
-       "1  {0: [box=[850.1380004882812, 224.1177520751953...  "
+       "0  {0: [box=[566.631103515625, 157.65919494628906...  \n",
+       "1  {0: [box=[849.8721313476562, 226.7397766113281...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,22 +723,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "now = datetime.now()\n",
-    "csv_file = f\"__{MODEL}-{get_gpu_name().replace(' ','_')}-{now.day}-{now.hour}-{now.min}.csv\"\n",
+    "csv_file = f\"zz-{MODEL}-{get_gpu_name()}-{now.day}-{now.hour}-{now.minute}.csv\"\n",
     "df.to_csv(csv_file)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p310",
+   "display_name": ".venv",
    "language": "python",
-   "name": "conda_pytorch_p310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -689,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
