--- a/03-grounding-dino-gh.ipynb
+++ b/03-grounding-dino-gh.ipynb
@@ -390,12 +390,14 @@
     "    \n",
     "    frames_ = {}\n",
     "    start = time.time()\n",
+    "    logger.info(\"Started Pre-processing\")\n",
     "    for frame_id, frame in read_video(video):\n",
     "        #frames_[frame_id] = Model.preprocess_image(frame).to(DEVICE)\n",
     "        frames_[frame_id] = preprocess_frame(frame).to(DEVICE)\n",
     "        if not source_h:\n",
     "            source_h, source_w, _ = frame.shape\n",
     "\n",
+    "    logger.info(\"Finished Pre-processing\")\n",
     "    pre_processing_time = time.time() - start\n",
     "    \n",
     "    frames_ = {k: frames_[k] for k in list(frames_.keys())[:3]}\n",
