--- a/03-grounding-dino-gh.ipynb
+++ b/03-grounding-dino-gh.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -162,7 +162,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
@@ -445,22 +445,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'groundingdino.datasets.transforms' has no attribute 'to'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m results \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m):\n\u001b[0;32m----> 3\u001b[0m     vid_hd \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_video\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/720.mp4\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     results\u001b[38;5;241m.\u001b[39mappend(vid_hd)\n\u001b[1;32m      5\u001b[0m     vid_fhd \u001b[38;5;241m=\u001b[39m process_video(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/1080.mp4\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[11], line 35\u001b[0m, in \u001b[0;36mprocess_video\u001b[0;34m(video, frames)\u001b[0m\n\u001b[1;32m     32\u001b[0m start \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m frame_id, frame \u001b[38;5;129;01min\u001b[39;00m read_video(video):\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;66;03m#frames_[frame_id] = Model.preprocess_image(frame).to(DEVICE)\u001b[39;00m\n\u001b[0;32m---> 35\u001b[0m     frames_[frame_id] \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess_frame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mto(DEVICE)\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m source_h:\n\u001b[1;32m     37\u001b[0m         source_h, source_w, _ \u001b[38;5;241m=\u001b[39m frame\u001b[38;5;241m.\u001b[39mshape\n",
-      "Cell \u001b[0;32mIn[9], line 10\u001b[0m, in \u001b[0;36mpreprocess_frame\u001b[0;34m(frame)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpreprocess_frame\u001b[39m(frame: np\u001b[38;5;241m.\u001b[39marray) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor:\n\u001b[1;32m      8\u001b[0m     transform \u001b[38;5;241m=\u001b[39m T\u001b[38;5;241m.\u001b[39mCompose(\n\u001b[1;32m      9\u001b[0m         [\n\u001b[0;32m---> 10\u001b[0m             \u001b[43mT\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m(DEVICE),\n\u001b[1;32m     11\u001b[0m             T\u001b[38;5;241m.\u001b[39mRandomResize([\u001b[38;5;241m800\u001b[39m], max_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1333\u001b[39m),\n\u001b[1;32m     12\u001b[0m             T\u001b[38;5;241m.\u001b[39mToTensor(),\n\u001b[1;32m     13\u001b[0m             T\u001b[38;5;241m.\u001b[39mNormalize([\u001b[38;5;241m0.485\u001b[39m, \u001b[38;5;241m0.456\u001b[39m, \u001b[38;5;241m0.406\u001b[39m], [\u001b[38;5;241m0.229\u001b[39m, \u001b[38;5;241m0.224\u001b[39m, \u001b[38;5;241m0.225\u001b[39m]),\n\u001b[1;32m     14\u001b[0m         ]\n\u001b[1;32m     15\u001b[0m     )\n\u001b[1;32m     16\u001b[0m     image_source \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mfromarray(frame\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muint8\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     17\u001b[0m     image_transformed, _ \u001b[38;5;241m=\u001b[39m transform(image_source, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'groundingdino.datasets.transforms' has no attribute 'to'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-06-12 14:13:58.271\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mStarted Pre-processing\u001b[0m\n",
+      "\u001b[32m2024-06-12 14:14:02.713\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mFinished Pre-processing\u001b[0m\n",
+      "FutureWarning: The `device` argument is deprecated and will be removed in v5 of Transformers.\n",
+      "UserWarning: torch.utils.checkpoint: the use_reentrant parameter should be passed explicitly. In version 2.4 we will raise an exception if use_reentrant is not passed. use_reentrant=False is recommended, but if you need to preserve the current default behavior, you can pass use_reentrant=True. Refer to docs for more details on the differences between the two variants.\n",
+      "UserWarning: None of the inputs have requires_grad=True. Gradients will be None\n",
+      "\u001b[32m2024-06-12 14:14:12.614\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mutils.protocols\u001b[0m:\u001b[36mlog\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mdata/720.mp4 | frames=3 | model_fps=0.3082736366966721 | inference_time=9.731613874435425 | preprocess_time=4.445042133331299\u001b[0m\n",
+      "\u001b[32m2024-06-12 14:14:12.619\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1mStarted Pre-processing\u001b[0m\n",
+      "\u001b[32m2024-06-12 14:14:18.649\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m40\u001b[0m - \u001b[1mFinished Pre-processing\u001b[0m\n"
      ]
     }
    ],
