added batch inference for owlwit

--- a/05-owlvit-batch.ipynb
+++ b/05-owlvit-batch.ipynb
@@ -265,9 +265,9 @@
     "        batch_size=BATCH_SIZE,\n",
     "        n_frames=n_frames,\n",
     "        \n",
-    "        pre_processing_time=mean(pre_processing_times),\n",
-    "        inference_time=mean(inference_times),\n",
-    "        post_processing_time=mean(post_processing_times),\n",
+    "        pre_processing_time=sum(pre_processing_times),\n",
+    "        inference_time=sum(inference_times),\n",
+    "        post_processing_time=sum(post_processing_times),\n",
     "        video_processing_time=(end_time-start_time).seconds,\n",
     "       \n",
     "        start_time=start_time.isoformat(),\n",
@@ -298,7 +298,13 @@
       "\u001b[32m2024-06-12 16:09:47.411\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n",
       "\u001b[32m2024-06-12 16:10:33.988\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mPostPorcessing\u001b[0m\n",
       "\u001b[32m2024-06-12 16:10:34.033\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mPreprocessing batch: 4\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:10:34.188\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n"
+      "\u001b[32m2024-06-12 16:10:34.188\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n",
+      "\u001b[32m2024-06-12 16:11:20.331\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mPostPorcessing\u001b[0m\n",
+      "\u001b[32m2024-06-12 16:11:20.362\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mPreprocessing batch: 4\u001b[0m\n",
+      "\u001b[32m2024-06-12 16:11:20.498\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n",
+      "\u001b[32m2024-06-12 16:11:57.965\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mPostPorcessing\u001b[0m\n",
+      "\u001b[32m2024-06-12 16:11:57.977\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mPreprocessing batch: 4\u001b[0m\n",
+      "\u001b[32m2024-06-12 16:11:58.103\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n"
      ]
     }
    ],
