UPdated owlviit btach

--- a/05-owlvit-batch.ipynb
+++ b/05-owlvit-batch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "abddf18a-23c4-4684-a3cb-d6aa4cfc4cbd",
    "metadata": {
     "tags": []
@@ -19,21 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a7a195d6-ce49-4b92-add1-6aa200c422cc",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tarik.setia/lab/cv-benchmark/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from PIL import Image\n",
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "98395948-5a69-451b-98b5-be1c2fb197ee",
    "metadata": {
     "tags": []
@@ -52,10 +43,10 @@
     {
      "data": {
       "text/plain": [
-       "'cpu'"
+       "'cuda'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,12 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "399e333d-a46c-4cbb-a76b-0fbf7f01e3ec",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/torch/_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  return self.fget.__get__(instance, owner)()\n"
+     ]
+    }
+   ],
    "source": [
     "processor = OwlViTProcessor.from_pretrained(\"google/owlvit-large-patch14\")\n",
     "model = OwlViTForObjectDetection.from_pretrained(\"google/owlvit-large-patch14\").to(device)"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "918ae3a4-4e34-49da-b8a6-be114c53d734",
    "metadata": {
     "tags": []
@@ -164,7 +164,7 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "953acdb9-1ce8-4ce5-97a1-f80f5865ddb7",
    "metadata": {
     "tags": []
@@ -184,10 +184,10 @@
     {
      "data": {
       "text/plain": [
-       "device(type='cpu')"
+       "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,9 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "86338b6e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -214,11 +216,12 @@
     "from loguru import logger\n",
     "from datetime import datetime\n",
     "\n",
-    "MODEL= \"owlvit-large-p14-hf\"\n",
+    "BATCH_SIZE = 3\n",
+    "\n",
+    "MODEL= f\"owlvit-large-p14-hf-batch-{BATCH_SIZE}\"\n",
     "\n",
     "text = \"face\"\n",
     "BASE_DIR = \"experiments/owlvit\"\n",
-    "BATCH_SIZE = 4\n",
     "\n",
     "\n",
     "def process_video(video):\n",
@@ -240,13 +243,11 @@
     "        \n",
     "        pre_processing_times.append(time.time()-start)\n",
     "        \n",
-    "        logger.info(f\"Running Inference\")\n",
     "        start = time.time()\n",
     "        with torch.no_grad():\n",
     "            outputs = model(**inputs)\n",
     "        inference_times.append(time.time()-start)\n",
     "        \n",
-    "        logger.info(f\"PostPorcessing\")\n",
     "        start = time.time()\n",
     "        detections = processor.post_process_object_detection(outputs=outputs, threshold=0.1, target_sizes=target_sizes)\n",
     "        batch_result =  {frame_id: convert_model_detection(detection) for frame_id, detection in zip(frame_ids, detections)}\n",
@@ -286,44 +287,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4c2b02ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-06-12 16:09:47.293\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mPreprocessing batch: 4\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:09:47.411\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:10:33.988\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mPostPorcessing\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:10:34.033\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mPreprocessing batch: 4\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:10:34.188\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:11:20.331\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mPostPorcessing\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:11:20.362\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mPreprocessing batch: 4\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:11:20.498\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:11:57.965\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mPostPorcessing\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:11:57.977\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m27\u001b[0m - \u001b[1mPreprocessing batch: 4\u001b[0m\n",
-      "\u001b[32m2024-06-12 16:11:58.103\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mprocess_video\u001b[0m:\u001b[36m37\u001b[0m - \u001b[1mRunning Inference\u001b[0m\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "d = process_video(\"data/720.mp4\")"
+    "results = []\n",
+    "for i in range(1):\n",
+    "    vid_hd = process_video(\"data/720.mp4\")\n",
+    "    results.append(vid_hd)\n",
+    "    vid_fhd = process_video(\"data/1080.mp4\")\n",
+    "    results.append(vid_fhd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0736c7df",
-   "metadata": {},
+   "id": "a22c3730-114e-44b3-95ee-5286a6fe2bcf",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "columns = results[0].columns\n",
+    "rows = [result.row for result in results]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4910ba66-51ff-41f5-96a1-1447cb7b1bf2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(rows, columns=columns)\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d93aed5-c053-4b96-a3fc-42e19263e361",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "csv_file = f\"zz-{MODEL}-{get_gpu_name()}-{now.day}-{now.hour}-{now.minute}.csv\"\n",
+    "df.to_csv(csv_file)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
