added inference mode

--- a/03-grounding-dino-gh.ipynb
+++ b/03-grounding-dino-gh.ipynb
@@ -154,6 +154,9 @@
    "source": [
     "import torch\n",
     "\n",
+    "torch.backends.cuda.matmul.allow_tf32 = True\n",
+    "torch.backends.cudnn.allow_tf32 = True\n",
+    "\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "DEVICE"
    ]
@@ -301,7 +304,8 @@
     "    caption = preprocess_caption(caption=caption)\n",
     "\n",
     "\n",
-    "    with torch.no_grad():\n",
+    "    #with torch.no_grad():\n",
+    "    with torch.inference_mode():\n",
     "        outputs = model(image[None], captions=[caption])\n",
     "\n",
     "    prediction_logits = outputs[\"pred_logits\"].cpu().sigmoid()[0]  # prediction_logits.shape = (nq, 256)\n",
