--- a/04-owlvit-base-patch-14.ipynb
+++ b/04-owlvit-base-patch-14.ipynb
@@ -61,6 +61,9 @@
     }
    ],
    "source": [
+    "torch.backends.cuda.matmul.allow_tf32 = True\n",
+    "torch.backends.cudnn.allow_tf32 = True\n",
+    "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "device"
    ]
@@ -223,7 +226,8 @@
     "def run_model(frames):\n",
     "    results = {}\n",
     "    for frame_id, frame in frames.items():\n",
-    "        with torch.no_grad():\n",
+    "        #with torch.no_grad():\n",
+    "        with torch.inference_mode():\n",
     "            outputs = model(**frame)\n",
     "            results[frame_id] = outputs\n",
     "    return results\n",
