--- a/05-owlvit-batch.ipynb
+++ b/05-owlvit-batch.ipynb
@@ -64,6 +64,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "01709bb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.backends.cuda.matmul.allow_tf32 = True\n",
+    "torch.backends.cudnn.allow_tf32 = True"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "98395948-5a69-451b-98b5-be1c2fb197ee",
    "metadata": {
@@ -273,7 +284,8 @@
     "        pre_processing_times.append(time.time()-start)\n",
     "        \n",
     "        start = time.time()\n",
-    "        with torch.no_grad():\n",
+    "        #with torch.no_grad():\n",
+    "        with torch.inference_mode():\n",
     "            outputs = model(**inputs)\n",
     "        inference_times.append(time.time()-start)\n",
     "        \n",
