fixed target_sizes issue

--- a/04-owlvit-base-patch-14.ipynb
+++ b/04-owlvit-base-patch-14.ipynb
@@ -242,7 +242,7 @@
     "        image = Image.fromarray(frame.astype(\"uint8\"))\n",
     "        inputs = processor(images=image, text=text, return_tensors=\"pt\").to(device)\n",
     "        frames_[frame_id] = inputs\n",
-    "        if not target_sizes:\n",
+    "        if target_sizes is None:\n",
     "            target_sizes = torch.Tensor([image.size[::-1]])\n",
     "    \n",
     "    pre_processing_time = time.time() - start\n",
